xc3_shader/src/snapshots/xc2 bl000101.22.snap
---
source: xc3_shader/src/database.rs
---
"o0.x": "Mul(vColor.x, Mix(Texture(s0, vTex0.x, vTex0.y).x, Texture(s1, vTex0.x, vTex0.y).x, Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].z)))"
"o0.y": "Mul(vColor.y, Mix(Texture(s0, vTex0.x, vTex0.y).y, Texture(s1, vTex0.x, vTex0.y).y, Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].z)))"
"o0.z": "Mul(vColor.z, Mix(Texture(s0, vTex0.x, vTex0.y).z, Texture(s1, vTex0.x, vTex0.y).z, Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].z)))"
"o0.w": "Mul(Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[1].x), U_Mate.gWrkFl4[0].w)"
"o1.x": "Texture(s4, vTex0.x, vTex0.y).y"
"o1.y": "U_Mate.gWrkFl4[2].x"
"o1.z": "U_Mate.gWrkFl4[1].y"
"o1.w": "0.07098039"
"o2.x": "Texture(s3, vTex0.x, vTex0.y).x"
"o2.y": "Texture(s3, vTex0.x, vTex0.y).y"
"o2.z": "Mul(Texture(s4, vTex0.x, vTex0.y).x, Max(vColor.z, Max(vColor.x, vColor.y)))"
"o3.x": "Div(1.0, InverseSqrt(Abs(Div(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5), Max(Max(Abs(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5)), Abs(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5))), 1.0)))))"
"o3.y": "Div(1.0, InverseSqrt(Abs(Div(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5), Max(Max(Abs(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5)), Abs(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5))), 1.0)))))"
"o3.z": "0.0"
"o3.w": "Add(Fma(Select(Not(GreaterEqual(Div(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5), Max(Max(Abs(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5)), Abs(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5))), 1.0)), 0.0)), 0.0, 1.0), 0.33333334, Mul(Select(Not(GreaterEqual(Div(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5), Max(Max(Abs(Mul(Fma(vPos.x, Div(1.0, vPos.w), Negate(Div(vPos.x, vPos.w))), 0.5)), Abs(Mul(Fma(vPos.y, Div(1.0, vPos.w), Negate(Div(vPos.y, vPos.w))), 0.5))), 1.0)), 0.0)), 0.0, 1.0), 0.6666667)), 0.01)"
"o4.x": "Sub(Mul(vPos.z, 8.0), Floor(Mul(vPos.z, 8.0)))"
"o4.y": "Sub(Mul(Floor(Mul(vPos.z, 8.0)), 0.003921569), Floor(Mul(Floor(Mul(vPos.z, 8.0)), 0.003921569)))"
"o4.z": "Mul(Floor(Mul(Floor(Mul(vPos.z, 8.0)), 0.003921569)), 0.003921569)"
"o4.w": "0.0"
"o5.x": "Texture(s5, Mul(vTex0.x, U_Mate.gWrkFl4[0].x), Mul(vTex0.y, U_Mate.gWrkFl4[0].y)).x"
"o5.y": "Texture(s5, Mul(vTex0.x, U_Mate.gWrkFl4[0].x), Mul(vTex0.y, U_Mate.gWrkFl4[0].y)).y"
"o5.z": "Texture(s5, Mul(vTex0.x, U_Mate.gWrkFl4[0].x), Mul(vTex0.y, U_Mate.gWrkFl4[0].y)).z"
"o5.w": "0.0"
outline_width: None
normal_intensity: None
val_inf_intensity: None
discard: "Less(Texture(volTex0, Mul(Mul(vPos.x, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[0].x), Mul(Mul(vPos.y, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[0].y), Mul(Mul(vPos.z, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[0].z)).x, Sub(Fma(Div(Min(Sqrt(Mix(Mix(Mul(Sub(Mul(vPos.x, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[1].x), Sub(Mul(vPos.x, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[1].x)), Mul(vPos.y, U_Mdl.gMdlParm.y), Sub(Mul(vPos.y, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[1].y)), Mul(vPos.z, U_Mdl.gMdlParm.y), Sub(Mul(vPos.z, U_Mdl.gMdlParm.y), U_VolTexCalc.gVolTexCalcWork[1].z))), U_VolTexCalc.gVolTexCalcWork[4].z), U_VolTexCalc.gVolTexCalcWork[4].z), Negate(U_VolTexCalc.gVolTexCalcWork[4].w), Fma(Add(U_VolTexCalc.gVolTexCalcWork[4].w, U_VolTexCalc.gVolTexCalcWork[1].w), U_VolTexCalc.gVolTexCalcWork[0].w, U_VolTexCalc.gVolTexCalcWork[0].w)), U_VolTexCalc.gVolTexCalcWork[1].w))"
"o0.xyz": "Mul(vColor.xyz, Mix(Texture(s0, vTex0.x, vTex0.y).xyz, Texture(s1, vTex0.x, vTex0.y).xyz, Mul(Texture(s2, vTex0.x, vTex0.y).xxx, U_Mate.gWrkFl4[0].zzz)))"
"o5.xyz": "Texture(s5, Mul(vTex0.x, U_Mate.gWrkFl4[0].x), Mul(vTex0.y, U_Mate.gWrkFl4[0].y)).xyz"
