xc3_shader/src/snapshots/xc2 bl000301.21.snap
---
source: xc3_shader/src/database.rs
---
var0 = Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).x, Texture(s1, vTex0.x, vTex0.y).x, var0);
var2 = Mix(var1, Texture(s3, vTex1.x, vTex1.y).x, Texture(s4, vTex1.x, vTex1.y).x);
var3 = Fresnel(U_Mate.gWrkFl4[0].y);
var4 = Mix(var2, U_Mate.gWrkCol.x, var3);
o0.x = var4;

var0 = Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).y, Texture(s1, vTex0.x, vTex0.y).y, var0);
var2 = Mix(var1, Texture(s3, vTex1.x, vTex1.y).y, Texture(s4, vTex1.x, vTex1.y).x);
var3 = Fresnel(U_Mate.gWrkFl4[0].y);
var4 = Mix(var2, U_Mate.gWrkCol.y, var3);
o0.y = var4;

var0 = Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).z, Texture(s1, vTex0.x, vTex0.y).z, var0);
var2 = Mix(var1, Texture(s3, vTex1.x, vTex1.y).z, Texture(s4, vTex1.x, vTex1.y).x);
var3 = Fresnel(U_Mate.gWrkFl4[0].y);
var4 = Mix(var2, U_Mate.gWrkCol.z, var3);
o0.z = var4;

var0 = Mul(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].w);
var1 = Mul(var0, U_Mate.gWrkFl4[0].z);
o0.w = var1;

o1.x = U_Mate.gWrkFl4[2].x;

o1.y = U_Mate.gWrkFl4[1].w;

o1.z = U_Mate.gWrkFl4[1].x;

o1.w = 0.008235293;

o2.x = Texture(s5, vTex0.x, vTex0.y).x;

o2.y = Texture(s5, vTex0.x, vTex0.y).y;

o2.z = Texture(s6, vTex0.x, vTex0.y).y;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(vPos.x, var0, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(vPos.y, var0, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.x = var16;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.y, vPos.w);
var2 = Negate(var1);
var3 = Fma(vPos.y, var0, var2);
var4 = Mul(var3, 0.5);
var5 = Div(vPos.x, vPos.w);
var6 = Negate(var5);
var7 = Fma(vPos.x, var0, var6);
var8 = Mul(var7, 0.5);
var9 = Abs(var8);
var10 = Abs(var4);
var11 = Max(var9, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = Abs(var13);
var15 = InverseSqrt(var14);
var16 = Div(1.0, var15);
o3.y = var16;

o3.z = 0.0;

var0 = Div(1.0, vPos.w);
var1 = Div(vPos.x, vPos.w);
var2 = Negate(var1);
var3 = Fma(vPos.x, var0, var2);
var4 = Mul(var3, 0.5);
var5 = Abs(var4);
var6 = Div(vPos.y, vPos.w);
var7 = Negate(var6);
var8 = Fma(vPos.y, var0, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = Max(var5, var10);
var12 = Max(var11, 1.0);
var13 = Div(var4, var12);
var14 = GreaterEqual(var13, 0.0);
var15 = Not(var14);
var16 = Select(var15, 0.0, 1.0);
var17 = Div(var9, var12);
var18 = GreaterEqual(var17, 0.0);
var19 = Not(var18);
var20 = Select(var19, 0.0, 1.0);
var21 = Mul(var20, 0.6666667);
var22 = Fma(var16, 0.33333334, var21);
var23 = Add(var22, 0.01);
o3.w = var23;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Sub(var0, var1);
o4.x = var2;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Sub(var2, var3);
o4.y = var4;

var0 = Mul(vPos.z, 8.0);
var1 = Floor(var0);
var2 = Mul(var1, 0.003921569);
var3 = Floor(var2);
var4 = Mul(var3, 0.003921569);
o4.z = var4;

o4.w = 0.0;

var0 = Mul(vPos.x, U_Mdl.gMdlParm.y);
var1 = Mul(var0, U_VolTexCalc.gVolTexCalcWork[0].x);
var2 = Mul(vPos.y, U_Mdl.gMdlParm.y);
var3 = Mul(var2, U_VolTexCalc.gVolTexCalcWork[0].y);
var4 = Mul(vPos.z, U_Mdl.gMdlParm.y);
var5 = Mul(var4, U_VolTexCalc.gVolTexCalcWork[0].z);
var6 = Sub(var0, U_VolTexCalc.gVolTexCalcWork[1].x);
var7 = Mul(var6, var6);
var8 = Sub(var2, U_VolTexCalc.gVolTexCalcWork[1].y);
var9 = Mix(var7, var2, var8);
var10 = Sub(var4, U_VolTexCalc.gVolTexCalcWork[1].z);
var11 = Mix(var9, var4, var10);
var12 = Sqrt(var11);
var13 = Min(var12, U_VolTexCalc.gVolTexCalcWork[4].z);
var14 = Div(var13, U_VolTexCalc.gVolTexCalcWork[4].z);
var15 = Negate(U_VolTexCalc.gVolTexCalcWork[4].w);
var16 = Add(U_VolTexCalc.gVolTexCalcWork[4].w, U_VolTexCalc.gVolTexCalcWork[1].w);
var17 = Fma(var16, U_VolTexCalc.gVolTexCalcWork[0].w, U_VolTexCalc.gVolTexCalcWork[0].w);
var18 = Fma(var14, var15, var17);
var19 = Sub(var18, U_VolTexCalc.gVolTexCalcWork[1].w);
var20 = Less(Texture(volTex0, var1, var3, var5).x, var19);
discard = var20;

var0 = Mul(Texture(s2, vTex0.x, vTex0.y).xxx, U_Mate.gWrkFl4[0].xxx);
var1 = Mix(Texture(s0, vTex0.x, vTex0.y).xyz, Texture(s1, vTex0.x, vTex0.y).xyz, var0);
var2 = Mix(var1, Texture(s3, vTex1.x, vTex1.y).xyz, Texture(s4, vTex1.x, vTex1.y).xxx);
var3 = Fresnel(U_Mate.gWrkFl4[0].yyy);
var4 = Mix(var2, U_Mate.gWrkCol.xyz, var3);
o0.xyz = var4;
