xc3_shader/src/snapshots/xc2 bl000501.6.snap
---
source: xc3_shader/src/database.rs
---
var0 = Negate(U_FOG.gFogPa[5].x);
var1 = IntBitsToFloat(gl_InstanceID);
var2 = FloatBitsToInt(var1);
var3 = Float(var2);
var4 = Add(var3, 1.0);
var5 = Mul(var4, U_Mate.gWrkFl4[0].w);
var6 = Mul(var5, var5);
var7 = Mul(var5, var6);
var8 = Mul(var4, U_Mate.gWrkFl4[1].x);
var9 = Fma(var8, vNormal.x, vPos.x);
var10 = Fma(var7, U_Mate.gWrkFl4[0].x, var9);
var11 = Fma(var8, vNormal.y, vPos.y);
var12 = Fma(var7, U_Mate.gWrkFl4[0].y, var11);
var13 = Fma(var8, vNormal.z, vPos.z);
var14 = Fma(var7, U_Mate.gWrkFl4[0].z, var13);
var15 = SkinPointZ(var10, var12, var14);
var16 = Sub(var0, var15);
var17 = Mul(var16, U_FOG.gFogPa[5].y);
var18 = Clamp(var17, 0.0, 1.0);
var19 = Power(var18, U_FOG.gFogPa[5].z);
var20 = Mul(var19, U_FOG.gFogPa[5].w);
var21 = Mul(var20, U_Mate.gWrkFl4[3].x);
var22 = SkinPointX(vPos.x, vPos.y, vPos.z);
var23 = SkinPointY(vPos.x, vPos.y, vPos.z);
var24 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var25 = MatMulPointProjX(var22, var23, var24);
var26 = MatMulPointProjW(var22, var23, var24);
var27 = Div(var25, var26);
var28 = Fma(var27, 0.5, 0.5);
var29 = MatMulPointProjY(var22, var23, var24);
var30 = Div(var29, var26);
var31 = Fma(var30, -0.5, 0.5);
var32 = Negate(U_Toon2.gToonParam[0].y);
var33 = Fma(Texture(texShadow, var28, var31).z, var32, Texture(texShadow, var28, var31).z);
var34 = Add(var33, U_Toon2.gToonParam[0].y);
var35 = Mul(var34, U_LGT.gLgtPreCol[0].z);
var36 = Fma(var35, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).z);
var37 = Mul(Texture(vp_t_tcb_C, var28, var31).z, U_Toon2.gToonParam[0].x);
var38 = Add(var36, var37);
var39 = Mul(var34, U_LGT.gLgtPreCol[0].y);
var40 = Fma(var39, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).y);
var41 = Mul(Texture(vp_t_tcb_C, var28, var31).y, U_Toon2.gToonParam[0].x);
var42 = Add(var40, var41);
var43 = Mul(var34, U_LGT.gLgtPreCol[0].x);
var44 = Fma(var43, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).x);
var45 = Mul(Texture(vp_t_tcb_C, var28, var31).x, U_Toon2.gToonParam[0].x);
var46 = Add(var44, var45);
var47 = Mul(var46, 0.299);
var48 = Fma(var42, 0.587, var47);
var49 = Fma(var38, 0.114, var48);
var50 = Add(var49, 1e-5);
var51 = Div(U_LGT.gLgtPreDir[0].w, var50);
var52 = Min(var51, 1.0);
var53 = Power(Texture(s0, vTex0.x, vTex0.y).x, U_Static.gCDep.w);
var54 = SkinVectorZ(vNormal.x, vNormal.y, vNormal.z);
var55 = SkinVectorY(vNormal.x, vNormal.y, vNormal.z);
var56 = SkinVectorX(vNormal.x, vNormal.y, vNormal.z);
var57 = Mul(var56, U_LGT.gLgtPreDir[0].x);
var58 = Fma(var55, U_LGT.gLgtPreDir[0].y, var57);
var59 = Fma(var54, U_LGT.gLgtPreDir[0].z, var58);
var60 = Mul(var56, U_Toon2.gToonParam[2].x);
var61 = Fma(var55, U_Toon2.gToonParam[2].y, var60);
var62 = Fma(var54, U_Toon2.gToonParam[2].z, var61);
var63 = Sub(U_Toon2.gToonParam[1].z, 0.5);
var64 = Clamp(var63, 0.0, 1.0);
var65 = Mul(var64, 0.5);
var66 = Negate(U_Toon2.gToonParam[1].y);
var67 = Fma(var65, var66, U_Toon2.gToonParam[1].y);
var68 = Add(var65, var67);
var69 = Mix(var59, var62, var68);
var70 = Fma(var69, 0.5, 0.5);
var71 = Fma(U_Mate.gWrkFl4[1].z, 255.0, 0.5);
var72 = Truncate(var71);
var73 = Int(var72);
var74 = Float(var73);
var75 = Add(var74, 0.5);
var76 = Mul(var75, 0.00390625);
var77 = Negate(U_Toon2.gToonParam[3].x);
var78 = Fma(var49, var52, var77);
var79 = Mul(var78, U_Toon2.gToonParam[3].y);
var80 = Clamp(var79, 0.0, 1.0);
var81 = Mix(Texture(gTToonDarkGrad, var70, var76).x, Texture(gTToonGrad, var70, var76).x, var80);
var82 = Power(var81, 2.2);
var83 = Mul(var53, var82);
var84 = Mul(var46, var83);
var85 = Mul(var52, var84);
var86 = Negate(var85);
var87 = SkinPointX(var10, var12, var14);
var88 = SkinPointY(var10, var12, var14);
var89 = NormalizeZ(var87, var88, var15);
var90 = NormalizeY(var87, var88, var15);
var91 = NormalizeX(var87, var88, var15);
var92 = Mul(var91, U_FOG.gFogPa[1].x);
var93 = Fma(var90, U_FOG.gFogPa[1].y, var92);
var94 = Fma(var89, U_FOG.gFogPa[1].z, var93);
var95 = Clamp(var94, 0.0, 1.0);
var96 = Power(var95, U_FOG.gFogPa[4].w);
var97 = Mul(var91, U_FOG.gFogPa[0].x);
var98 = Fma(var90, U_FOG.gFogPa[0].y, var97);
var99 = Fma(var89, U_FOG.gFogPa[0].z, var98);
var100 = Abs(var99);
var101 = Sub(1.0, var100);
var102 = Clamp(var101, 0.0, 1.0);
var103 = Power(var102, U_FOG.gFogPa[3].w);
var104 = Sub(var103, 0.8);
var105 = Mul(var104, 5.0);
var106 = Clamp(var105, 0.0, 1.0);
var107 = MulRatio(var103, vp_c1.data[0].x, var106);
var108 = Fma(var107, U_FOG.gFogPa[3].x, U_FOG.gFogPa[2].x);
var109 = Fma(var96, U_FOG.gFogPa[4].x, var108);
var110 = Fma(Texture(texAO, var28, var31).z, var86, var109);
var111 = Mul(Texture(texAO, var28, var31).z, var85);
var112 = Fma(var21, var110, var111);
o0.x = var112;

var0 = Negate(U_FOG.gFogPa[5].x);
var1 = IntBitsToFloat(gl_InstanceID);
var2 = FloatBitsToInt(var1);
var3 = Float(var2);
var4 = Add(var3, 1.0);
var5 = Mul(var4, U_Mate.gWrkFl4[0].w);
var6 = Mul(var5, var5);
var7 = Mul(var5, var6);
var8 = Mul(var4, U_Mate.gWrkFl4[1].x);
var9 = Fma(var8, vNormal.x, vPos.x);
var10 = Fma(var7, U_Mate.gWrkFl4[0].x, var9);
var11 = Fma(var8, vNormal.y, vPos.y);
var12 = Fma(var7, U_Mate.gWrkFl4[0].y, var11);
var13 = Fma(var8, vNormal.z, vPos.z);
var14 = Fma(var7, U_Mate.gWrkFl4[0].z, var13);
var15 = SkinPointZ(var10, var12, var14);
var16 = Sub(var0, var15);
var17 = Mul(var16, U_FOG.gFogPa[5].y);
var18 = Clamp(var17, 0.0, 1.0);
var19 = Power(var18, U_FOG.gFogPa[5].z);
var20 = Mul(var19, U_FOG.gFogPa[5].w);
var21 = Mul(var20, U_Mate.gWrkFl4[3].x);
var22 = SkinPointX(vPos.x, vPos.y, vPos.z);
var23 = SkinPointY(vPos.x, vPos.y, vPos.z);
var24 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var25 = MatMulPointProjX(var22, var23, var24);
var26 = MatMulPointProjW(var22, var23, var24);
var27 = Div(var25, var26);
var28 = Fma(var27, 0.5, 0.5);
var29 = MatMulPointProjY(var22, var23, var24);
var30 = Div(var29, var26);
var31 = Fma(var30, -0.5, 0.5);
var32 = Negate(U_Toon2.gToonParam[0].y);
var33 = Fma(Texture(texShadow, var28, var31).z, var32, Texture(texShadow, var28, var31).z);
var34 = Add(var33, U_Toon2.gToonParam[0].y);
var35 = Mul(var34, U_LGT.gLgtPreCol[0].z);
var36 = Fma(var35, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).z);
var37 = Mul(Texture(vp_t_tcb_C, var28, var31).z, U_Toon2.gToonParam[0].x);
var38 = Add(var36, var37);
var39 = Mul(var34, U_LGT.gLgtPreCol[0].y);
var40 = Fma(var39, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).y);
var41 = Mul(Texture(vp_t_tcb_C, var28, var31).y, U_Toon2.gToonParam[0].x);
var42 = Add(var40, var41);
var43 = Mul(var34, U_LGT.gLgtPreCol[0].x);
var44 = Fma(var43, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).x);
var45 = Mul(Texture(vp_t_tcb_C, var28, var31).x, U_Toon2.gToonParam[0].x);
var46 = Add(var44, var45);
var47 = Mul(var46, 0.299);
var48 = Fma(var42, 0.587, var47);
var49 = Fma(var38, 0.114, var48);
var50 = Add(var49, 1e-5);
var51 = Div(U_LGT.gLgtPreDir[0].w, var50);
var52 = Min(var51, 1.0);
var53 = Power(Texture(s0, vTex0.x, vTex0.y).y, U_Static.gCDep.w);
var54 = SkinVectorZ(vNormal.x, vNormal.y, vNormal.z);
var55 = SkinVectorY(vNormal.x, vNormal.y, vNormal.z);
var56 = SkinVectorX(vNormal.x, vNormal.y, vNormal.z);
var57 = Mul(var56, U_LGT.gLgtPreDir[0].x);
var58 = Fma(var55, U_LGT.gLgtPreDir[0].y, var57);
var59 = Fma(var54, U_LGT.gLgtPreDir[0].z, var58);
var60 = Mul(var56, U_Toon2.gToonParam[2].x);
var61 = Fma(var55, U_Toon2.gToonParam[2].y, var60);
var62 = Fma(var54, U_Toon2.gToonParam[2].z, var61);
var63 = Sub(U_Toon2.gToonParam[1].z, 0.5);
var64 = Clamp(var63, 0.0, 1.0);
var65 = Mul(var64, 0.5);
var66 = Negate(U_Toon2.gToonParam[1].y);
var67 = Fma(var65, var66, U_Toon2.gToonParam[1].y);
var68 = Add(var65, var67);
var69 = Mix(var59, var62, var68);
var70 = Fma(var69, 0.5, 0.5);
var71 = Fma(U_Mate.gWrkFl4[1].z, 255.0, 0.5);
var72 = Truncate(var71);
var73 = Int(var72);
var74 = Float(var73);
var75 = Add(var74, 0.5);
var76 = Mul(var75, 0.00390625);
var77 = Negate(U_Toon2.gToonParam[3].x);
var78 = Fma(var49, var52, var77);
var79 = Mul(var78, U_Toon2.gToonParam[3].y);
var80 = Clamp(var79, 0.0, 1.0);
var81 = Mix(Texture(gTToonDarkGrad, var70, var76).y, Texture(gTToonGrad, var70, var76).y, var80);
var82 = Power(var81, 2.2);
var83 = Mul(var53, var82);
var84 = Mul(var42, var83);
var85 = Mul(var52, var84);
var86 = Negate(var85);
var87 = SkinPointX(var10, var12, var14);
var88 = SkinPointY(var10, var12, var14);
var89 = NormalizeZ(var87, var88, var15);
var90 = NormalizeY(var87, var88, var15);
var91 = NormalizeX(var87, var88, var15);
var92 = Mul(var91, U_FOG.gFogPa[1].x);
var93 = Fma(var90, U_FOG.gFogPa[1].y, var92);
var94 = Fma(var89, U_FOG.gFogPa[1].z, var93);
var95 = Clamp(var94, 0.0, 1.0);
var96 = Power(var95, U_FOG.gFogPa[4].w);
var97 = Mul(var91, U_FOG.gFogPa[0].x);
var98 = Fma(var90, U_FOG.gFogPa[0].y, var97);
var99 = Fma(var89, U_FOG.gFogPa[0].z, var98);
var100 = Abs(var99);
var101 = Sub(1.0, var100);
var102 = Clamp(var101, 0.0, 1.0);
var103 = Power(var102, U_FOG.gFogPa[3].w);
var104 = Sub(var103, 0.8);
var105 = Mul(var104, 5.0);
var106 = Clamp(var105, 0.0, 1.0);
var107 = MulRatio(var103, vp_c1.data[0].x, var106);
var108 = Fma(var107, U_FOG.gFogPa[3].y, U_FOG.gFogPa[2].y);
var109 = Fma(var96, U_FOG.gFogPa[4].y, var108);
var110 = Fma(Texture(texAO, var28, var31).z, var86, var109);
var111 = Mul(Texture(texAO, var28, var31).z, var85);
var112 = Fma(var21, var110, var111);
o0.y = var112;

var0 = Negate(U_FOG.gFogPa[5].x);
var1 = IntBitsToFloat(gl_InstanceID);
var2 = FloatBitsToInt(var1);
var3 = Float(var2);
var4 = Add(var3, 1.0);
var5 = Mul(var4, U_Mate.gWrkFl4[0].w);
var6 = Mul(var5, var5);
var7 = Mul(var5, var6);
var8 = Mul(var4, U_Mate.gWrkFl4[1].x);
var9 = Fma(var8, vNormal.x, vPos.x);
var10 = Fma(var7, U_Mate.gWrkFl4[0].x, var9);
var11 = Fma(var8, vNormal.y, vPos.y);
var12 = Fma(var7, U_Mate.gWrkFl4[0].y, var11);
var13 = Fma(var8, vNormal.z, vPos.z);
var14 = Fma(var7, U_Mate.gWrkFl4[0].z, var13);
var15 = SkinPointZ(var10, var12, var14);
var16 = Sub(var0, var15);
var17 = Mul(var16, U_FOG.gFogPa[5].y);
var18 = Clamp(var17, 0.0, 1.0);
var19 = Power(var18, U_FOG.gFogPa[5].z);
var20 = Mul(var19, U_FOG.gFogPa[5].w);
var21 = Mul(var20, U_Mate.gWrkFl4[3].x);
var22 = SkinPointX(vPos.x, vPos.y, vPos.z);
var23 = SkinPointY(vPos.x, vPos.y, vPos.z);
var24 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var25 = MatMulPointProjX(var22, var23, var24);
var26 = MatMulPointProjW(var22, var23, var24);
var27 = Div(var25, var26);
var28 = Fma(var27, 0.5, 0.5);
var29 = MatMulPointProjY(var22, var23, var24);
var30 = Div(var29, var26);
var31 = Fma(var30, -0.5, 0.5);
var32 = Negate(U_Toon2.gToonParam[0].y);
var33 = Fma(Texture(texShadow, var28, var31).z, var32, Texture(texShadow, var28, var31).z);
var34 = Add(var33, U_Toon2.gToonParam[0].y);
var35 = Mul(var34, U_LGT.gLgtPreCol[0].z);
var36 = Fma(var35, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).z);
var37 = Mul(Texture(vp_t_tcb_C, var28, var31).z, U_Toon2.gToonParam[0].x);
var38 = Add(var36, var37);
var39 = Mul(var34, U_LGT.gLgtPreCol[0].y);
var40 = Fma(var39, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).y);
var41 = Mul(Texture(vp_t_tcb_C, var28, var31).y, U_Toon2.gToonParam[0].x);
var42 = Add(var40, var41);
var43 = Mul(var34, U_LGT.gLgtPreCol[0].x);
var44 = Fma(var43, U_Toon2.gToonParam[0].z, Texture(texLgt, var28, var31).x);
var45 = Mul(Texture(vp_t_tcb_C, var28, var31).x, U_Toon2.gToonParam[0].x);
var46 = Add(var44, var45);
var47 = Mul(var46, 0.299);
var48 = Fma(var42, 0.587, var47);
var49 = Fma(var38, 0.114, var48);
var50 = Add(var49, 1e-5);
var51 = Div(U_LGT.gLgtPreDir[0].w, var50);
var52 = Min(var51, 1.0);
var53 = Power(Texture(s0, vTex0.x, vTex0.y).z, U_Static.gCDep.w);
var54 = SkinVectorZ(vNormal.x, vNormal.y, vNormal.z);
var55 = SkinVectorY(vNormal.x, vNormal.y, vNormal.z);
var56 = SkinVectorX(vNormal.x, vNormal.y, vNormal.z);
var57 = Mul(var56, U_LGT.gLgtPreDir[0].x);
var58 = Fma(var55, U_LGT.gLgtPreDir[0].y, var57);
var59 = Fma(var54, U_LGT.gLgtPreDir[0].z, var58);
var60 = Mul(var56, U_Toon2.gToonParam[2].x);
var61 = Fma(var55, U_Toon2.gToonParam[2].y, var60);
var62 = Fma(var54, U_Toon2.gToonParam[2].z, var61);
var63 = Sub(U_Toon2.gToonParam[1].z, 0.5);
var64 = Clamp(var63, 0.0, 1.0);
var65 = Mul(var64, 0.5);
var66 = Negate(U_Toon2.gToonParam[1].y);
var67 = Fma(var65, var66, U_Toon2.gToonParam[1].y);
var68 = Add(var65, var67);
var69 = Mix(var59, var62, var68);
var70 = Fma(var69, 0.5, 0.5);
var71 = Fma(U_Mate.gWrkFl4[1].z, 255.0, 0.5);
var72 = Truncate(var71);
var73 = Int(var72);
var74 = Float(var73);
var75 = Add(var74, 0.5);
var76 = Mul(var75, 0.00390625);
var77 = Negate(U_Toon2.gToonParam[3].x);
var78 = Fma(var49, var52, var77);
var79 = Mul(var78, U_Toon2.gToonParam[3].y);
var80 = Clamp(var79, 0.0, 1.0);
var81 = Mix(Texture(gTToonDarkGrad, var70, var76).z, Texture(gTToonGrad, var70, var76).z, var80);
var82 = Power(var81, 2.2);
var83 = Mul(var53, var82);
var84 = Mul(var38, var83);
var85 = Mul(var52, var84);
var86 = Negate(var85);
var87 = SkinPointX(var10, var12, var14);
var88 = SkinPointY(var10, var12, var14);
var89 = NormalizeZ(var87, var88, var15);
var90 = NormalizeY(var87, var88, var15);
var91 = NormalizeX(var87, var88, var15);
var92 = Mul(var91, U_FOG.gFogPa[1].x);
var93 = Fma(var90, U_FOG.gFogPa[1].y, var92);
var94 = Fma(var89, U_FOG.gFogPa[1].z, var93);
var95 = Clamp(var94, 0.0, 1.0);
var96 = Power(var95, U_FOG.gFogPa[4].w);
var97 = Mul(var91, U_FOG.gFogPa[0].x);
var98 = Fma(var90, U_FOG.gFogPa[0].y, var97);
var99 = Fma(var89, U_FOG.gFogPa[0].z, var98);
var100 = Abs(var99);
var101 = Sub(1.0, var100);
var102 = Clamp(var101, 0.0, 1.0);
var103 = Power(var102, U_FOG.gFogPa[3].w);
var104 = Sub(var103, 0.8);
var105 = Mul(var104, 5.0);
var106 = Clamp(var105, 0.0, 1.0);
var107 = MulRatio(var103, vp_c1.data[0].x, var106);
var108 = Fma(var107, U_FOG.gFogPa[3].z, U_FOG.gFogPa[2].z);
var109 = Fma(var96, U_FOG.gFogPa[4].z, var108);
var110 = Fma(Texture(texAO, var28, var31).z, var86, var109);
var111 = Mul(Texture(texAO, var28, var31).z, var85);
var112 = Fma(var21, var110, var111);
o0.z = var112;

var0 = FurInstanceAlpha(U_Mate.gWrkFl4[1].y);
var1 = Mul(Texture(s1, vTex0.x, vTex0.y).x, var0);
o0.w = var1;

var0 = Power(Texture(s0, vTex0.x, vTex0.y).x, U_Static.gCDep.w);
var1 = Mul(var0, 0.0);
o1.x = var1;

var0 = Power(Texture(s0, vTex0.x, vTex0.y).y, U_Static.gCDep.w);
var1 = Mul(var0, 0.0);
o1.y = var1;

var0 = Power(Texture(s0, vTex0.x, vTex0.y).z, U_Static.gCDep.w);
var1 = Mul(var0, 0.0);
o1.z = var1;

var0 = FurInstanceAlpha(U_Mate.gWrkFl4[1].y);
var1 = Mul(Texture(s1, vTex0.x, vTex0.y).x, var0);
o1.w = var1;

var0 = IntBitsToFloat(gl_InstanceID);
var1 = FloatBitsToInt(var0);
var2 = Float(var1);
var3 = Add(var2, 1.0);
var4 = Mul(var3, U_Mate.gWrkFl4[0].w);
var5 = Mul(var4, var4);
var6 = Mul(var4, var5);
var7 = Mul(var3, U_Mate.gWrkFl4[1].x);
var8 = Fma(var7, vNormal.x, vPos.x);
var9 = Fma(var6, U_Mate.gWrkFl4[0].x, var8);
var10 = Mul(var9, U_Mdl.gMdlParm.y);
var11 = Mul(var10, U_VolTexCalc.gVolTexCalcWork[0].x);
var12 = Fma(var7, vNormal.y, vPos.y);
var13 = Fma(var6, U_Mate.gWrkFl4[0].y, var12);
var14 = Mul(var13, U_Mdl.gMdlParm.y);
var15 = Mul(var14, U_VolTexCalc.gVolTexCalcWork[0].y);
var16 = Fma(var7, vNormal.z, vPos.z);
var17 = Fma(var6, U_Mate.gWrkFl4[0].z, var16);
var18 = Mul(var17, U_Mdl.gMdlParm.y);
var19 = Mul(var18, U_VolTexCalc.gVolTexCalcWork[0].z);
var20 = Sub(var10, U_VolTexCalc.gVolTexCalcWork[1].x);
var21 = Mul(var20, var20);
var22 = Sub(var14, U_VolTexCalc.gVolTexCalcWork[1].y);
var23 = Mix(var21, var14, var22);
var24 = Sub(var18, U_VolTexCalc.gVolTexCalcWork[1].z);
var25 = Mix(var23, var18, var24);
var26 = Sqrt(var25);
var27 = Min(var26, U_VolTexCalc.gVolTexCalcWork[4].z);
var28 = Div(var27, U_VolTexCalc.gVolTexCalcWork[4].z);
var29 = Negate(U_VolTexCalc.gVolTexCalcWork[4].w);
var30 = Add(U_VolTexCalc.gVolTexCalcWork[4].w, U_VolTexCalc.gVolTexCalcWork[1].w);
var31 = Fma(var30, U_VolTexCalc.gVolTexCalcWork[0].w, U_VolTexCalc.gVolTexCalcWork[0].w);
var32 = Fma(var28, var29, var31);
var33 = Sub(var32, U_VolTexCalc.gVolTexCalcWork[1].w);
var34 = Less(Texture(volTex0, var11, var15, var19).x, var33);
discard = var34;

var0 = Power(Texture(s0, vTex0.x, vTex0.y).xyz, U_Static.gCDep.www);
var1 = Mul(var0, [0.0, 0.0, 0.0]);
o1.xyz = var1;
