xc3_shader/src/snapshots/xc2 en020601.0.snap
---
source: xc3_shader/src/database.rs
---
var0 = Mul(vColor.x, Texture(s0, vTex0.x, vTex0.y).x);
o0.x = var0;

var0 = Mul(vColor.y, Texture(s0, vTex0.x, vTex0.y).y);
o0.y = var0;

var0 = Mul(vColor.z, Texture(s0, vTex0.x, vTex0.y).z);
o0.z = var0;

var0 = IntBitsToFloat(0);
o0.w = var0;

var0 = Mix(Texture(s2, vTex0.x, vTex0.y).y, U_Mate.gWrkFl4[0].y, U_Mate.gWrkFl4[1].y);
o1.x = var0;

var0 = Mix(Texture(s2, vTex0.x, vTex0.y).x, U_Mate.gWrkFl4[0].x, U_Mate.gWrkFl4[1].x);
o1.y = var0;

o1.z = 0.0;

o1.w = 0.0043137255;

o2.x = Texture(s1, vTex0.x, vTex0.y).x;

o2.y = Texture(s1, vTex0.x, vTex0.y).y;

var0 = Mix(Texture(s2, vTex0.x, vTex0.y).z, U_Mate.gWrkFl4[0].z, U_Mate.gWrkFl4[1].z);
var1 = Max(vColor.x, vColor.y);
var2 = Max(vColor.z, var1);
var3 = Mul(var0, var2);
o2.z = var3;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjX(var0, var1, var2);
var4 = MatMulPointProjW(var0, var1, var2);
var5 = Div(1.0, var4);
var6 = Div(var3, var4);
var7 = Negate(var6);
var8 = Fma(var3, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var4);
var13 = Negate(var12);
var14 = Fma(var11, var5, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.x = var22;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjY(var0, var1, var2);
var4 = MatMulPointProjW(var0, var1, var2);
var5 = Div(1.0, var4);
var6 = Div(var3, var4);
var7 = Negate(var6);
var8 = Fma(var3, var5, var7);
var9 = Mul(var8, 0.5);
var10 = MatMulPointProjX(var0, var1, var2);
var11 = Div(var10, var4);
var12 = Negate(var11);
var13 = Fma(var10, var5, var12);
var14 = Mul(var13, 0.5);
var15 = Abs(var14);
var16 = Abs(var9);
var17 = Max(var15, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = Abs(var19);
var21 = InverseSqrt(var20);
var22 = Div(1.0, var21);
o3.y = var22;

o3.z = 0.0;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjX(var0, var1, var2);
var4 = MatMulPointProjW(var0, var1, var2);
var5 = Div(1.0, var4);
var6 = Div(var3, var4);
var7 = Negate(var6);
var8 = Fma(var3, var5, var7);
var9 = Mul(var8, 0.5);
var10 = Abs(var9);
var11 = MatMulPointProjY(var0, var1, var2);
var12 = Div(var11, var4);
var13 = Negate(var12);
var14 = Fma(var11, var5, var13);
var15 = Mul(var14, 0.5);
var16 = Abs(var15);
var17 = Max(var10, var16);
var18 = Max(var17, 1.0);
var19 = Div(var9, var18);
var20 = GreaterEqual(var19, 0.0);
var21 = Not(var20);
var22 = Select(var21, 0.0, 1.0);
var23 = Div(var15, var18);
var24 = GreaterEqual(var23, 0.0);
var25 = Not(var24);
var26 = Select(var25, 0.0, 1.0);
var27 = Mul(var26, 0.6666667);
var28 = Fma(var22, 0.33333334, var27);
var29 = Add(var28, 0.01);
o3.w = var29;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Sub(var6, var7);
o4.x = var8;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Sub(var8, var9);
o4.y = var10;

var0 = SkinPointX(vPos.x, vPos.y, vPos.z);
var1 = SkinPointY(vPos.x, vPos.y, vPos.z);
var2 = SkinPointZ(vPos.x, vPos.y, vPos.z);
var3 = MatMulPointProjZ(var0, var1, var2);
var4 = Sub(var3, U_Static.gCDep.y);
var5 = Mul(var4, U_Static.gCDep.z);
var6 = Mul(var5, 8.0);
var7 = Floor(var6);
var8 = Mul(var7, 0.003921569);
var9 = Floor(var8);
var10 = Mul(var9, 0.003921569);
o4.z = var10;

o4.w = 0.0;

var0 = Mul(vPos.x, U_Mdl.gMdlParm.y);
var1 = Mul(var0, U_VolTexCalc.gVolTexCalcWork[0].x);
var2 = Mul(vPos.y, U_Mdl.gMdlParm.y);
var3 = Mul(var2, U_VolTexCalc.gVolTexCalcWork[0].y);
var4 = Mul(vPos.z, U_Mdl.gMdlParm.y);
var5 = Mul(var4, U_VolTexCalc.gVolTexCalcWork[0].z);
var6 = Sub(var0, U_VolTexCalc.gVolTexCalcWork[1].x);
var7 = Mul(var6, var6);
var8 = Sub(var2, U_VolTexCalc.gVolTexCalcWork[1].y);
var9 = Mix(var7, var2, var8);
var10 = Sub(var4, U_VolTexCalc.gVolTexCalcWork[1].z);
var11 = Mix(var9, var4, var10);
var12 = Sqrt(var11);
var13 = Min(var12, U_VolTexCalc.gVolTexCalcWork[4].z);
var14 = Div(var13, U_VolTexCalc.gVolTexCalcWork[4].z);
var15 = Negate(U_VolTexCalc.gVolTexCalcWork[4].w);
var16 = Add(U_VolTexCalc.gVolTexCalcWork[4].w, U_VolTexCalc.gVolTexCalcWork[1].w);
var17 = Fma(var16, U_VolTexCalc.gVolTexCalcWork[0].w, U_VolTexCalc.gVolTexCalcWork[0].w);
var18 = Fma(var14, var15, var17);
var19 = Sub(var18, U_VolTexCalc.gVolTexCalcWork[1].w);
var20 = Less(Texture(volTex0, var1, var3, var5).x, var19);
discard = var20;

var0 = Mul(vColor.xyz, Texture(s0, vTex0.x, vTex0.y).xyz);
o0.xyz = var0;
